--- a/ricardo.html
+++ b/ricardo.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Ricardo es lo maximo</h1>
+    <h1>Ricardo es lo maximo!</h1>
 </body>
 </html>
